--- a/CSE_360_PROJECT/.classpath
+++ b/CSE_360_PROJECT/.classpath
@@ -16,12 +16,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files (x86)/H2/bin/h2-2.3.232.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/BoncyCastle">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/BouncyCastle">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/H2">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
