--- a/CSE_360_PROJECT/.classpath
+++ b/CSE_360_PROJECT/.classpath
@@ -26,7 +26,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Chris/Downloads/bcprov-jdk18on-1.78.1.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/BouncyCastle">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
